gccida/g3/build_pointer_type
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/build_pointer_type/src/tree.c:4184:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v4; // r12 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/build_pointer_type/src/tree.c:4190:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v10; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/build_pointer_type/src/tree.c:4193:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v13; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/build_pointer_type/src/tree.c:4208:19: error: expected expression
v4 = ( tree_node *)ggc_alloc( v3); 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/build_pointer_type/src/tree.c:4208:8: error: use of undeclared identifier 'tree_node'
v4 = ( tree_node *)ggc_alloc( v3); 
       ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/build_pointer_type/src/tree.c:4244:19: error: expected expression
v4 = ( tree_node *)ggc_alloc( v14); 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/build_pointer_type/src/tree.c:4244:8: error: use of undeclared identifier 'tree_node'
v4 = ( tree_node *)ggc_alloc( v14); 
       ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/build_pointer_type/src/tree.c:4249:20: error: expected expression
v13 = ( tree_node *)ggc_alloc( 0xD0uLL); 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/build_pointer_type/src/tree.c:4249:9: error: use of undeclared identifier 'tree_node'
v13 = ( tree_node *)ggc_alloc( 0xD0uLL); 
        ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/build_pointer_type/src/tree.c:4260:20: error: expected expression
v10 = ( tree_node *)ggc_alloc( 0xA8uLL); 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/build_pointer_type/src/tree.c:4260:9: error: use of undeclared identifier 'tree_node'
v10 = ( tree_node *)ggc_alloc( 0xA8uLL); 
        ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/build_pointer_type/src/tree.c:4285:19: error: expected expression
v4 = ( tree_node *)ggc_alloc( v9); 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/build_pointer_type/src/tree.c:4285:8: error: use of undeclared identifier 'tree_node'
v4 = ( tree_node *)ggc_alloc( v9); 
       ^
13 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/build_pointer_type/src/obj/tree.o] Error 1
